# sqlalchemy-addons

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  base.py  context.py  db.py  exceptions.py  logger.py  manager.py  models.py  pyproject.toml  requirements  requirements-cicd.txt  utils.py
db/: operators.py  query.py  settings.py
factory/: boolean_operators.py  converters.py  custom_types.py  wrapper.py
sqlalchemy_wrapper/: context.py  exceptions.py  logger.py  manager.py  utils.py
sqlalchemy_wrapper/db/: operators.py  query.py  settings.py
tests/: .coveragerc  __init__.py  base_model.py  conftest.py  models.py  test_manager.py  test_operators.py  test_query.py  test_utils.py
tests/db/: test_operators.py  test_query.py  test_settings.py
