[tool.poetry]
name = "sqlalchemy-django-wrapper"
version = "v0.1.0"
description = "A wrapper on top of sqlalchemy that allow to make django orm style query"
authors = ["Soumaila <soumaila.kouriba@creativeteam.ml>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "sqlalchemy_wrapper"}, {include = "tests"}]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag_only"
build_command = "poetry build"
branch = "refactor"

[tool.poetry.dependencies]
python = "^3.9"
cfgv = "3.3.1"
distlib = "0.3.6"
filelock = "3.8.0"
greenlet = "1.1.3"
identify = "2.5.5"
jsonformatter = "0.3.1"
nodeenv = "1.7.0"
platformdirs = "2.5.2"
psycopg2 = "2.9.3"
pydantic = "1.10.2"
PyYAML = "6.0"
SQLAlchemy = "1.4.41"
toml = "0.10.2"
typing-extensions = "4.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
